build head, nav, basic structure for home

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,2 +1,8 @@
-@include 'colors';
-@include 'typography';
+---
+# Front matter comment to ensure Jekyll properly reads file.
+---
+
+@import "colors";
+@import "typography";
+@import "borderbox";
+@import "nav";
