--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,9 +9,9 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
   <div class="overlay-content">
-    <a href="#about" onclick="closeNav()">ABOUT US</a>
-    <a href="#grads" onclick="closeNav()">TEAM</a>
-    <a href="#profs" onclick="closeNav()">CONTACT</a>
+    <a href="{{site.baseurl}}/about" onclick="closeNav()">ABOUT US</a>
+    <a href="{{site.baseurl}}/team" onclick="closeNav()">TEAM</a>
+    <a href="{{site.baseurl}}/contact" onclick="closeNav()">CONTACT</a>
   </div>
 
   </div>
