--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -1,3 +1,27 @@
 $green: #a6c09a;
 $navy-blue: #2B3036;
 $grey-blue: #434549;
+
+.txt-green {
+  color: $green;
+}
+
+.txt-navy {
+  color: $navy-blue;
+}
+
+.txt-grey {
+  color: $grey-blue;
+}
+
+.bg-green {
+  background-color: $green;
+}
+
+.bg-navy {
+  background-color: $navy-blue;
+}
+
+.bg-grey {
+  background-color: $grey-blue;
+}
