--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -36,6 +36,7 @@ nav {
 	color: #fff;
 	display: block;
 	transition: all 0.2s ease-in-out;
+  font-family: $rubik;
 }
 
 .overlay a:hover, .overlay a:focus {
