--- a/css/style.scss
+++ b/css/style.scss
@@ -6,3 +6,33 @@
 @import "typography";
 @import "borderbox";
 @import "nav";
+@import "mixins";
+
+html {
+  font-family: $rubik;
+}
+
+//background video
+.bg-video {
+  height: 100vh;
+	position: relative;
+
+  .fullscreen-bg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: -100;
+
+    .fullscreen-bg__video {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    	object-fit: cover;
+    }
+  }
+}
