final background video and about bucket for mobilw

--- a/_includes/bg-video.html
+++ b/_includes/bg-video.html
@@ -1,14 +1,16 @@
 <section class="bg-video clearfix">
-  <div class="video-text-overlay">
-    <h1 class="">A true catalyst for change</h1>
-    <h2 class="">
+  <div class="video-text-overlay text-center">
+    <h1 class="hero-header">A true catalyst for change</h1>
+    <h2 class="hero-sub">By shifting the traditional investment paridigm and bringing together the leading team in the space, Cannabis Wheaton is redefining the cannabis industry.
+    </h2>
   </div>
 
-  <button class="pause-button">pause video</button>
+  <div class="video-dots">
+  </div>
 
   <div class="fullscreen-bg">
     <video muted autoplay poster="" class="fullscreen-bg__video">
-        <source src="">
+        <source src="http://res.cloudinary.com/dtbrkt2ur/video/upload/v1491329572/web-background-480p_2_h2i7xm.mov">
     </video>
   </div>
 </section>
