--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav class="">
-  <a class="button" href="{{site.baseurl}}/">
+  <a href="{{site.baseurl}}/">
     <i class="wheaton-logo">
 
     </i>
