--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -12,10 +12,10 @@ nav {
 	z-index: 100000;
 	top: 0;
 	right: 0;
-	background-color: $grey-blue;
+	background-color: $grey;
 	overflow-x: hidden;
 	transition: all 0.3s ease-in;
-	opacity: .9;
+	opacity: .95;
 }
 
 .overlay-content {
