--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,1 +1,18 @@
+@import "mixins";
 $rubik: 'Rubik', sans-serif;
+
+.hero-header {
+  color: $green;
+  font-size: 42px;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+.hero-sub {
+  color: #fff;
+  line-height: 1.4;
+}
+
+.hero-text {
+  @include hero-text;
+  width: 90%;
+}
