team bucket and footer styled for mobile

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,6 @@
-<nav class="">
+<nav>
   <a href="{{site.baseurl}}/">
-    <i class="wheaton-logo">
-
-    </i>
+    <img class="cw-logo" src="{{site.baseurl}}/svgs/cw-logo.svg" alt="Cannabis Wheaton logo">
   </a>
 
   <div id="myNav" class="overlay">
