--- a/_includes/home-about.html
+++ b/_includes/home-about.html
@@ -7,7 +7,7 @@
       We aren’t interested in creating a monopoly. We are interested in creating value for compa-nies and allowing them to exceed their growth potential and achieve success. Cannabis Wheaton invests and support a range of cannabis cultivation companies each of which have different visions, voices and brand values, however they all share a common goal – create a world class industry based on diversity, quality and innovation.
     </p>
     <div class="text-center">
-      <a class="button" href="#">Learn More</a>
+      <a class="button-dark" href="#">Learn More</a>
     </div>
   </div>
 </section>
