--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -1,10 +1,11 @@
-.button {
+.button-dark {
   text-transform: uppercase;
   font-size: 14px;
   text-decoration: none;
   color: $navy;
   padding: 1rem;
   display: block;
+  margin: 0 auto;
   border: 1px solid $navy;
   width: 50%;
   transition: .2s all ease-in;
@@ -14,10 +15,29 @@
   }
 }
 
+.button-light {
+  text-transform: uppercase;
+  font-size: 14px;
+  text-decoration: none;
+  color: #fff;
+  padding: 1rem;
+  display: block;
+  margin: 0 auto;
+  border: 1px solid #fff;
+  width: 50%;
+  transition: .2s all ease-in;
+  &:hover {
+    color: $navy;
+    background-color: #fff;
+  }
+}
+
 .img-flex {
   width: 100%;
 }
 
 .img-oversize {
   width: 200%;
+  transform: translateX(-25%);
+  z-index: 1;
 }
