--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -5,7 +5,9 @@ $rubik: 'Rubik', sans-serif;
   color: $green;
   font-size: 42px;
   margin-bottom: 1rem;
+  font-weight: 300;
   text-transform: uppercase;
+  line-height: 1.3;
 }
 .hero-sub {
   color: #fff;
