team members added, waypoint function for nav, some responsiveness to pages

--- a/_includes/bg-video.html
+++ b/_includes/bg-video.html
@@ -1,6 +1,6 @@
 <section class="bg-video clearfix">
   <div class="video-text-overlay text-center">
-    <h1 class="hero-header">A true catalyst for change</h1>
+    <h1 class="hero-header way">A true catalyst for change</h1>
     <h2 class="hero-sub">By shifting the traditional investment paridigm and bringing together the leading team in the space, Cannabis Wheaton is redefining the cannabis industry.
     </h2>
   </div>
