--- a/_includes/home-about.html
+++ b/_includes/home-about.html
@@ -3,11 +3,13 @@
     <h2 class="para-header">
       Companies that solely focus on competition will die. Those that focus on value creation will thrive.
     </h2>
-    <p class="para-body">
-      We aren’t interested in creating a monopoly. We are interested in creating value for compa-nies and allowing them to exceed their growth potential and achieve success. Cannabis Wheaton invests and support a range of cannabis cultivation companies each of which have different visions, voices and brand values, however they all share a common goal – create a world class industry based on diversity, quality and innovation.
-    </p>
-    <div class="text-center">
-      <a class="button-dark" href="#">Learn More</a>
+    <div class="para-body">
+      <p class="pad-b">
+        We aren’t interested in creating a monopoly. We are interested in creating value for compa-nies and allowing them to exceed their growth potential and achieve success. Cannabis Wheaton invests and support a range of cannabis cultivation companies each of which have different visions, voices and brand values, however they all share a common goal – create a world class industry based on diversity, quality and innovation.
+      </p>
+      <div class="text-center">
+        <a class="button-dark text-center" href="{{site.baseurl}}/about">Learn More</a>
+      </div>
     </div>
   </div>
 </section>
