--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
   </main>
 
   {% include footer.html %}
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
   <script src="{{site.baseurl}}/js/main.js"></script>
 </body>
 </html>
