--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -16,13 +16,20 @@ $rubik: 'Rubik', sans-serif;
 
 .hero-text {
   @include hero-text;
-  width: 90%;
+  width: 100%;
   z-index: 100;
+  padding: 0 1rem;
+  @include bp(phone) {
+    padding: 0 2rem;
+  }
 }
 
 .text-huge-green {
   padding: 0 1rem 1rem 1rem;
   color: $green;
+  @include bp(phone) {
+    padding: 0 2rem 2rem 2rem;
+  }
   .header-huge {
     font-size: 80px;
     margin-bottom: 1rem;
