--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -17,6 +17,9 @@ nav {
 	@include bp(tablet) {
 		left: 4rem;
 	}
+	@include bp(desktop) {
+		left: 10rem;
+	}
 }
 
 .overlay {
@@ -46,6 +49,9 @@ nav {
 	@include bp(tablet) {
 		padding-left: 4rem;
 	}
+	@include bp(desktop) {
+		padding-left: 10rem;
+	}
 }
 
 .overlay a {
@@ -60,6 +66,9 @@ nav {
 	@include bp(tablet) {
 		font-size: 86px;
 	}
+	@include bp(desktop) {
+		font-size: 100px;
+	}
 }
 
 .overlay a:hover, .overlay a:focus {
@@ -71,7 +80,16 @@ nav {
 	position: absolute;
   top: -10px;
   right: 1rem;
-	font-size: 70px;
+	font-size: 80px;
+	@include bp(phone) {
+		right: 2rem;
+	}
+	@include bp(tablet) {
+		right: 4rem;
+	}
+	@include bp(desktop) {
+		right: 10rem;
+	}
 }
 
 .hamburger {
@@ -86,6 +104,9 @@ nav {
 	}
 	@include bp(tablet) {
 		right: 4rem;
+	}
+	@include bp(desktop) {
+		right: 10rem;
 	}
 }
 
