--- a/css/style.scss
+++ b/css/style.scss
@@ -53,6 +53,10 @@ html {
     @include bp(tablet) {
       padding: 0 4rem;
     }
+    @include bp(desktop) {
+      padding: 0 10rem;
+      @include wrapper;
+    }
   }
 
   .video-dots {
@@ -84,6 +88,9 @@ html {
 //about bucket
 .text-section {
   padding: 2rem 0;
+  @include bp(desktop) {
+    @include wrapper;
+  }
 }
 
 .para-box {
@@ -95,13 +102,16 @@ html {
   @include bp(tablet) {
     padding: 2rem 4rem;
   }
+  @include bp(desktop) {
+    padding: 2rem 10rem;
+  }
   .para-header {
     font-size: 36px;
     font-weight: 100;
     margin-bottom: 1rem;
     line-height: 1.1;
     @include bp(tablet) {
-      font-size: 40px;
+      font-size: 48px;
       float: left;
       width: 50%;
       text-align: right;
@@ -113,6 +123,7 @@ html {
     margin-bottom: 1rem;
     line-height: 1.1;
     @include bp(tablet) {
+      font-size: 48px;
       float: left;
       width: 100%;
     }
@@ -141,6 +152,9 @@ html {
 .connect-hero {
   position: relative;
   overflow: hidden;
+  @include bp(desktop) {
+    height: 70%;
+  }
 }
 
 //about-page
