--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,7 @@
 @import "reset";
 @import "elements";
 @import "footer";
+@import "team";
 
 
 //global
@@ -143,31 +144,6 @@ html {
     display: block;
     @include bp(tablet) {
       display: none;
-    }
-  }
-}
-//team page
-.team-profiles {
-  padding: 1rem;
-  @include bp(phone) {
-    padding: 2rem;
-  }
-  .team-member {
-    .team-photo {
-      width: 100%;
-      margin-bottom: 1rem;
-    }
-    .team-name {
-      font-weight: 700;
-      font-size: 24px;
-    }
-    .team-title {
-      font-style: italic;
-      margin-bottom: 1rem;
-    }
-    .team-bio {
-      margin-bottom: 2rem;
-      line-height: 1.4;
     }
   }
 }
