--- a/css/style.scss
+++ b/css/style.scss
@@ -88,6 +88,7 @@ html {
 //about bucket
 .text-section {
   padding: 2rem 0;
+  position: relative;
   @include bp(desktop) {
     @include wrapper;
   }
