lame attempt at fixing - needs work

--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -52,6 +52,11 @@
         clear: none;
         width: 65%;
         float: left;
+      @include bp(desktop) {
+        clear: both;
+        column-count: 2;
+        float: left;
+      }
       }
     }
   }
