--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -5,7 +5,7 @@
   color: $navy;
   padding: 1rem;
   display: block;
-  margin: 0 auto;
+  margin: 0 auto 0 0;
   border: 1px solid $navy;
   width: 50%;
   transition: .2s all ease-in;
@@ -24,11 +24,17 @@
   display: block;
   margin: 0 auto;
   border: 1px solid #fff;
-  width: 20%;
+  width: 50%;
   transition: .2s all ease-in;
   &:hover {
     color: $navy;
     background-color: #fff;
+  }
+  @include bp(phone) {
+    width: 40%;
+  }
+  @include bp(tablet) {
+    width: 20%;
   }
 }
 
@@ -40,6 +46,10 @@
   width: 200%;
   transform: translateX(-25%);
   z-index: 1;
+  @include bp(desktop) {
+    width: 120%;
+    transform: translateX(-9%);
+  }
 }
 
 .hero-img {
@@ -47,6 +57,14 @@
 }
 
 .img-banner {
-  height: 100%;
-  transform: translateX(-36%);
+  height: 130%;
+  transform: translateX(-16%);
+  @include bp(tablet) {
+    transform: translateX(0);
+  }
+  @include bp(desktop) {
+    height: auto;
+    width: 100vw;
+    transform: translateX(0);
+  }
 }
