--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -7,11 +7,26 @@ $rubik: 'Rubik', sans-serif;
   margin-bottom: 1rem;
   font-weight: light;
   text-transform: uppercase;
+  @include bp(tablet) {
+    font-size: 52px;
+  }
+  @include bp(desktop) {
+    font-size: 68px;
+  }
 }
 .hero-sub {
   color: #fff;
   line-height: 1.4;
   margin-bottom: 2rem;
+  @include bp(phone) {
+    font-size: 16px;
+  }
+  @include bp(tablet) {
+    font-size: 18px
+  }
+  @include bp(desktop) {
+    font-size: 22px;
+  }
 }
 
 .hero-text {
@@ -22,6 +37,13 @@ $rubik: 'Rubik', sans-serif;
   @include bp(phone) {
     padding: 0 2rem;
   }
+  @include bp(tablet) {
+    padding: 0 4rem;
+  }
+  @include bp(desktop) {
+    padding: 0 10rem;
+    @include wrapper;
+  }
 }
 
 .text-huge-green {
@@ -29,6 +51,10 @@ $rubik: 'Rubik', sans-serif;
   color: $green;
   @include bp(phone) {
     padding: 0 2rem 2rem 2rem;
+  }
+  @include bp(tablet) {
+    padding-left: calc(50% + 2rem);
+
   }
   .header-huge {
     font-size: 80px;
