--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -1,27 +1,16 @@
 @import "colors";
 
-.video-text-overlay {
-  max-width: 900px;
-}
-
 .hero-header {
-  @include bp(phone) {
-    font-size: 4rem;
-  }
   @include bp(tablet) {
-    font-size: 5rem;
-  }
-  @include bp(desktop) {
-    font-size: 6rem;
+    font-size: 4rem;
   }
 }
 
 .hero-sub {
+  max-width: 700px;
+  margin: auto;
   @include bp(phone) {
     font-size: 1rem;
-  }
-  @include bp(tablet) {
-    font-size: 1.5rem;
   }
 }
 
@@ -47,7 +36,7 @@
       margin: 3rem 5rem 3rem 5rem;
     }
     @include bp(desktop) {
-      margin: 3rem 10rem 3rem 10rem;
+      margin: 3rem 15rem 3rem 15rem;
     }
     .team-photo {
       margin-bottom: 1rem;
@@ -68,12 +57,9 @@
     .team-name {
       font-weight: 700;
       font-size: 24px;
+      margin-bottom: 0.4rem;
       @include bp(phone) {
-        font-size: 2rem;
-        margin-bottom: .5rem;
-      }
-      @include bp(desktop) {
-        font-size: 3rem;
+        font-size: 1.9rem;
       }
     }
     .team-title {
@@ -82,7 +68,8 @@
       margin-bottom: 1rem;
     }
     .team-bio {
-      line-height: 1.4;
+      line-height: 1.6;
+      font-size: 0.8rem;
       @include bp(phone) {
         clear: both;
       }
