--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -23,7 +23,7 @@ nav {
 	z-index: 100000;
 	top: 0;
 	right: 0;
-	background-color: $grey;
+	background-color: $navy;
 	overflow-x: hidden;
 	transition: all 0.3s ease-in;
 	opacity: .95;
