font weight changes, nav resize, favicon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>{% if page.title %}{{page.title}} · {% endif %}Cannabis Wheaton{% if page.titleAfter %} · {{page.titleAfter}}{% endif %}</title>
   <link href="{{site.baseurl}}/css/style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
-  <link href="{{site.baseurl}}/img/favicon.ico" rel="shortcut icon">
+  <link href="https://fonts.googleapis.com/css?family=Rubik:100" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rubik:300" rel="stylesheet">
+  <link href="{{site.baseurl}}/favicons/favicon.ico" rel="shortcut icon">
   <meta name="description" content="{{page.meta}}">
 </head>
