--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
     <img class="cw-logo" src="{{site.baseurl}}/svgs/cw-logo.svg" alt="Cannabis Wheaton logo">
   </a>
 
-  <div id="myNav" class="overlay">
+  <div id="myNav" class="overlay" onclick="closeNav()">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
   <div class="overlay-content">
