--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,16 +1,16 @@
 nav {
 	position: fixed;
-	height: 80px;
+	height: 70px;
 	z-index: 1000000;
 	width: 100%;
 	transition: .2s all linear;
 }
 
 .cw-logo {
-	width: 60px;
+	width: 100px;
 	position: absolute;
-	left: 1rem;
-	top: 1rem;
+	left: 2rem;
+	top: 1.5rem;
 	@include bp(phone) {
 		left: 2rem;
 	}
@@ -60,7 +60,7 @@ nav {
 	font-size: 40px;
 	font-weight: 300;
 	color: #fff;
-	display: block;
+	display: table;
 	transition: all 0.2s ease-in-out;
   font-family: $rubik;
 	@include bp(tablet) {
@@ -78,24 +78,24 @@ nav {
 
 .overlay .closebtn {
 	position: absolute;
-  top: -10px;
-  right: 1rem;
-	font-size: 80px;
+  top: -1px;
+  right: 1px;
+	font-size: 50px;
 	@include bp(phone) {
-		right: 2rem;
+		right: 1rem;
 	}
 	@include bp(tablet) {
-		right: 4rem;
+		right: 3rem;
 	}
 	@include bp(desktop) {
-		right: 10rem;
+		right: 9rem;
 	}
 }
 
 .hamburger {
 	position: fixed;
 	z-index: 100;
-	top: 1.5rem;
+	top: 1.6rem;
 	right: 1rem;
 	z-index: 1000;
 	cursor: pointer;
@@ -111,5 +111,5 @@ nav {
 }
 
 .ham-bars {
-	width: 35px;
+	width: 20px;
 }
