--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -1,6 +1,6 @@
 .button-dark {
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 12px;
   text-decoration: none;
   color: $navy;
   padding: 1rem;
@@ -13,11 +13,17 @@
     color: #fff;
     background-color: $navy;
   }
+  @include bp(phone) {
+    width: 40%;
+  }
+  @include bp(tablet) {
+    width: 25%;
+  }
 }
 
 .button-light {
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 12px;
   text-decoration: none;
   color: #fff;
   padding: 1rem;
@@ -34,7 +40,7 @@
     width: 40%;
   }
   @include bp(tablet) {
-    width: 20%;
+    width: 12%;
   }
 }
 
