--- a/css/style.scss
+++ b/css/style.scss
@@ -154,6 +154,7 @@ html {
     margin-bottom: 2rem;
     line-height: 1.4;
     @include bp(tablet) {
+      padding-top: 10px;
       float: left;
       width: 50%;
       padding-left: 2rem;
@@ -165,6 +166,7 @@ html {
     margin-bottom: 2rem;
     line-height: 1.4;
     @include bp(tablet) {
+      padding-top: 10px;
       float: left;
       width: 50%;
     }
