--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,6 +7,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
   <div class="overlay-content">
+    <a href="{{site.baseurl}}/" onclick="closeNav()">HOME</a>
     <a href="{{site.baseurl}}/about" onclick="closeNav()">ABOUT US</a>
     <a href="{{site.baseurl}}/team" onclick="closeNav()">TEAM</a>
     <a href="{{site.baseurl}}/contact" onclick="closeNav()">CONTACT</a>
