--- a/css/style.scss
+++ b/css/style.scss
@@ -286,3 +286,78 @@ html {
     }
   }
 }
+
+//contact page
+.contact {
+  .video-text-overlay {
+    form {
+      ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+        color: #fff;
+        font-size: 12px;
+      }
+      ::-moz-placeholder { /* Firefox 19+ */
+        color: #fff;
+        font-size: 12px;
+      }
+      :-ms-input-placeholder { /* IE 10+ */
+        color: #fff;
+        font-size: 12px;
+      }
+      :-moz-placeholder { /* Firefox 18- */
+        color: #fff;
+        font-size: 12px;
+      }
+      input {
+        width: 100%;
+        display: block;
+        outline: none;
+        margin-bottom: 1rem;
+        height: 40px;
+        padding: 15px;
+        border: none;
+        border-bottom: 2px solid #fff;
+        background-color: transparent;
+        font-family: $rubik;
+        color: #fff;
+        font-size: 16px;
+        &:focus {
+          border-bottom: 2px solid $green;
+        }
+      }
+      textarea {
+        width: 100%;
+        height: 100px;
+        padding: 15px;
+        border: none;
+        outline: none;
+        border-bottom: 2px solid #fff;
+        background-color: transparent;
+        font-family: $rubik;
+        color: #fff;
+        font-size: 16px;
+        margin-bottom: 2rem;
+        &:focus {
+          border-bottom: 2px solid $green;
+        }
+      }
+      button {
+        background-color: transparent;
+        border: 1px solid #fff;
+        outline: none;
+        color: #fff;
+        font-family: $rubik;
+        text-transform: uppercase;
+        font-size: 12px;
+        cursor: pointer;
+        padding: 1rem;
+        display: block;
+        width: 150px;
+        transition: .2s all ease-in;
+        &:hover {
+          color: $navy;
+          background-color: #fff;
+        }
+      }
+    }
+  }
+}
