--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -51,9 +51,12 @@
   width: 200%;
   transform: translateX(-25%);
   z-index: 1;
+  @include bp(tablet) {
+    width: 160%;
+    transform: translateX(0);
+  }
   @include bp(desktop) {
-    width: 120%;
-    transform: translateX(-9%);
+    width: 100%;
   }
 }
 
