--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -43,8 +43,58 @@ $rubik: 'Rubik', sans-serif;
   }
 }
 
+.banner-header {
+  color: $green;
+  font-size: 32px;
+  margin-bottom: 1rem;
+  font-weight: lighter;
+  text-transform: uppercase;
+  @include bp(tablet) {
+    font-size: 36px;
+  }
+}
+.banner-sub {
+  font-weight: lighter;
+  color: #fff;
+  line-height: 1.4;
+  margin-bottom: 2rem;
+  @include bp(phone) {
+    font-size: 16px;
+  }
+  @include bp(tablet) {
+    margin-bottom: 0;
+  }
+}
+
+.banner-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 100%;
+  z-index: 100000;
+  padding: 0 1rem;
+  @include bp(phone) {
+    padding: 0 2rem;
+  }
+  @include bp(tablet) {
+    padding: 0 4rem;
+    width: 50%;
+    float: left;
+    transform: translate(0,-50%);
+    top: 50%;
+    text-align: left;
+  }
+  @include bp(desktop) {
+    padding: 0 10rem 0 4rem;
+    @include wrapper;
+  }
+}
+
 .text-huge-green {
-  padding: 0 1rem 1rem 1rem;
+  font-weight: lighter;
+  padding: 0;
   color: $green;
   @include bp(phone) {
     padding: 0 2rem 2rem 2rem;
@@ -53,12 +103,16 @@ $rubik: 'Rubik', sans-serif;
     padding-left: calc(50% + 2rem)
 
   }
+  .content-huge ~ .header-huge {
+    padding-top: 2rem;
+    border-top: 1px solid $green;
+  }
   .header-huge {
-    font-size: 80px;
+    font-size: 90px;
     margin-bottom: 1rem;
   }
   .content-huge {
-    font-size: 22px;
+    font-size: 32px;
     margin-bottom: 2rem;
   }
 }
