--- a/css/style.scss
+++ b/css/style.scss
@@ -20,6 +20,10 @@ html {
   }
 }
 
+.clearfix {
+  @include clearfix;
+}
+
 .text-center {
   text-align: center;
 }
@@ -32,6 +36,16 @@ html {
   position: relative;
   overflow: hidden;
   height: 700px;
+}
+
+.banner {
+  height: 700px;
+  background-color: $grey;
+  position: relative;
+  overflow: hidden;
+  @include bp(tablet) {
+    height: 400px;
+  }
 }
 
 .pad-b {
@@ -196,18 +210,17 @@ html {
     }
   }
 }
-.about-hero-bottom {
-  position: relative;
-  .video-dots {
-    position: absolute;
-    z-index: 100;
-    height: 100%;
-    width: 100%;
-    background-image: url({{site.baseurl}}/img/black-medium-checks.png);
-    background-repeat: repeat;
-  }
 
+
+.banner-img {
+  @include bp(tablet) {
+    width: 50%;
+    float: left;
+    z-index: 1;
+    overflow: hidden;
+  }
 }
+
 //team page
 .team-name {
  color: $green;
@@ -291,6 +304,7 @@ html {
 .contact {
   .video-text-overlay {
     form {
+      position: relative;
       ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
         color: #fff;
         font-size: 12px;
@@ -323,6 +337,17 @@ html {
         &:focus {
           border-bottom: 2px solid $green;
         }
+        @include bp(tablet) {
+          width: calc(50% - 2rem);
+          float: left;
+          height: 100px;
+          margin-right: 2rem;
+        }
+      }
+      input:nth-child(2) {
+        @include bp(tablet) {
+          clear: both;
+        }
       }
       textarea {
         width: 100%;
@@ -338,6 +363,14 @@ html {
         margin-bottom: 2rem;
         &:focus {
           border-bottom: 2px solid $green;
+        }
+        @include bp(tablet) {
+          width: 50%;
+          height: calc(200px + 1rem);
+          position: absolute;
+          top: 0;
+          right: 0;
+          padding-top: 44px;
         }
       }
       button {
@@ -356,6 +389,11 @@ html {
         &:hover {
           color: $navy;
           background-color: #fff;
+        }
+        @include bp(tablet) {
+          position: absolute;
+          bottom: -4rem;
+          right: 0;
         }
       }
     }
