--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,11 @@
 <footer id="footer">
+  <a class="cw-logo" href="{{site.baseurl}}/">
+    <img src="{{site.baseurl}}/svgs/w-icon.svg" alt="Cannabis Wheaton logo">
+  </a>
   <div class="soshmeeds">
-    <a class="sosh-icon" href="#">
-      <img class="img-flex" src="{{site.baseurl}}/svgs/fb-icon.svg">
-    </a>
-    <a class="sosh-icon" href="#">
-      <img class="img-flex" src="{{site.baseurl}}/svgs/tw-icon.svg">
-    </a>
-    <a class="sosh-icon" href="#">
-      <img class="img-flex" src="{{site.baseurl}}/svgs/in-icon.svg">
-    </a>
+    <a class="sosh-link" href="#">Facebook</a>
+    <a class="sosh-link" href="#">Twitter</a>
+    <a class="sosh-link" href="#">LinkedIn</a>
   </div>
   <div class="footer-text">
     <p class="copyright">© 2017 Cannabis Wheaton</p>
