--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -14,10 +14,7 @@
     background-color: $navy;
   }
   @include bp(phone) {
-    width: 40%;
-  }
-  @include bp(tablet) {
-    width: 25%;
+    width: 130px;
   }
 }
 
@@ -36,10 +33,7 @@
     background-color: #fff;
   }
   @include bp(phone) {
-    width: 40%;
-  }
-  @include bp(tablet) {
-    width: 12%;
+    width: 130px;
   }
 }
 
