--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,34 +1,62 @@
 footer {
-  position: relative;
+  text-align: center;
   background-color: $navy;
-  padding: 1rem 1rem;
+  padding: 1.5rem 1rem;
   @include bp(tablet) {
-    padding: 4rem;
+    padding: 0;
+    position: relative;
+    height: 120px;
   }
-  .cw-logo {
-    width: 50px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  .soshmeeds {
-    text-align: right;
-    width: 60%;
-    margin: 0 0 0 auto;
-    .sosh-link {
-      font-size: 12px;
-      color: #fff;
-      font-weight: lighter;
-      display: inline-block;
-      margin: 5px 5px;
+  .w-icon {
+    display: block;
+    margin-bottom: 1rem;
+    svg {
+      width: 40px;
+    }
+    @include bp(tablet) {
+      position: absolute;
+      left: 4rem;
+      top: 50%;
+      transform: translateY(-50%);
+      margin-bottom: 0;
+    }
+    @include bp(desktop) {
+      left: 10rem;
     }
   }
-  .footer-text {
-    width: 30%;
-    display: inline-block;
-    color: #fff;
-    .copyright {
-      font-size: 8px;
-      margin-bottom: 1rem;
+  .soshmeeds {
+    display: block;
+    @include bp(tablet) {
+      position: absolute;
+      right: 4rem;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    @include bp(desktop) {
+      right: 10rem;
+    }
+    .sosh-link {
+      font-size: 12px;
+      color: $m-grey;
+      font-weight: lighter;
+      display: inline-block;
+      margin: 0 15px;
+      &:hover {
+        color: #fff;
+      }
+    }
+  }
+  .footer-copyright {
+    font-size: 10px;
+    font-weight: lighter;
+    color: $m-grey;
+    padding-bottom: 1rem;
+    @include bp(tablet) {
+      padding-bottom: 0;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%,-50%);
     }
   }
 }
