--- a/css/style.scss
+++ b/css/style.scss
@@ -14,7 +14,7 @@
 
 //global
 html {
-  font-family: $rubik;
+  font-family: $weiss;
   body {
     margin: 0;
   }
@@ -331,7 +331,7 @@ html {
         border: none;
         border-bottom: 2px solid #fff;
         background-color: transparent;
-        font-family: $rubik;
+        font-family: $weiss;
         color: #fff;
         font-size: 16px;
         &:focus {
@@ -357,7 +357,7 @@ html {
         outline: none;
         border-bottom: 2px solid #fff;
         background-color: transparent;
-        font-family: $rubik;
+        font-family: $weiss;
         color: #fff;
         font-size: 16px;
         margin-bottom: 2rem;
@@ -378,7 +378,7 @@ html {
         border: 1px solid #fff;
         outline: none;
         color: #fff;
-        font-family: $rubik;
+        font-family: $weiss;
         text-transform: uppercase;
         font-size: 12px;
         cursor: pointer;
