sizing/scale fine tuning for images/graphics

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav>
   <a href="{{site.baseurl}}/">
-    <img class="cw-logo" src="{{site.baseurl}}/svgs/w-icon.svg" alt="Cannabis Wheaton logo">
+    <img class="cw-logo" src="{{site.baseurl}}/svgs/cw-logo.svg" alt="Cannabis Wheaton logo">
   </a>
 
   <div id="myNav" class="overlay" onclick="closeNav()">
