--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -44,18 +44,19 @@ $weiss: 'weissenhof_grotesk', sans-serif;
 }
 
 .banner-header {
-  color: $navy;
+  color: $green;
   font-size: 32px;
   margin-bottom: 1rem;
   font-weight: lighter;
   text-transform: uppercase;
   @include bp(tablet) {
     font-size: 36px;
+    color: $navy;
   }
 }
 .banner-sub {
   font-weight: lighter;
-  color: $navy;
+  color: #fff;
   line-height: 1.4;
   margin-bottom: 2rem;
   @include bp(phone) {
@@ -63,10 +64,11 @@ $weiss: 'weissenhof_grotesk', sans-serif;
   }
   @include bp(tablet) {
     margin-bottom: 0;
+    color: $navy;
   }
 }
 
-.banner-text {
+.banner-text-right {
   text-align: center;
   position: absolute;
   top: 50%;
@@ -92,6 +94,32 @@ $weiss: 'weissenhof_grotesk', sans-serif;
   }
 }
 
+.banner-text-left {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 100%;
+  z-index: 100000;
+  padding: 0 1rem;
+  @include bp(phone) {
+    padding: 0 2rem;
+  }
+  @include bp(tablet) {
+    padding: 0 4rem;
+    width: 50%;
+    float: right;
+    transform: translate(-100%,-50%);
+    top: 50%;
+    right: 50%;
+    text-align: right;
+  }
+  @include bp(desktop) {
+    padding: 0 4rem 0 10rem;
+  }
+}
+
 .text-huge-green {
   @include clearfix;
   font-weight: lighter;
@@ -103,7 +131,7 @@ $weiss: 'weissenhof_grotesk', sans-serif;
     padding: 2rem 0;
   }
   @include bp(desktop) {
-    padding: 4rem 0;
+    padding: 4rem 0 0 0;
   }
   .huge-text-box {
     width: 80%;
