grid color adjustment

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -2,7 +2,7 @@ $green: #a6c09a;
 $navy: #2B3036;
 $grey: #434549;
 $m-grey: #888;
-$l-grey: #ccc;
+$l-grey: #f1f1f2;
 
 .txt-green {
   color: $green;
