--- a/css/style.scss
+++ b/css/style.scss
@@ -11,6 +11,13 @@
 @import "elements";
 @import "footer";
 
+@font-face {
+  font-family: 'weissenhof_grotesk';
+  src: url('/indian_type_foundry_-_weissenhofgrotesk-light-webfont.woff2') format('woff2'),
+       url('/indian_type_foundry_-_weissenhofgrotesk-light-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 
 //global
 html {
