input graphics for about page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,11 @@
       </g>
     </svg>
   </a>
+  <div class="footer-nav">
+    <a class="footer-link" href="{{site.baseurl}}/about" onclick="closeNav()">About Us</a>
+    <a class="footer-link" href="{{site.baseurl}}/team" onclick="closeNav()">Team</a>
+    <a class="footer-link" href="{{site.baseurl}}/contact" onclick="closeNav()">Contact</a>
+  </div>
   <div class="footer-copyright">
     <p class="copyright">© 2017 Cannabis Wheaton</p>
   </div>
