--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -69,6 +69,7 @@ $weiss: 'weissenhof_grotesk', sans-serif;
 }
 
 .banner-text-right {
+  height: 100%;
   text-align: center;
   position: absolute;
   top: 50%;
@@ -76,25 +77,29 @@ $weiss: 'weissenhof_grotesk', sans-serif;
   transform: translate(-50%,-50%);
   width: 100%;
   z-index: 100000;
-  padding: 0 1rem;
+  padding: 30% 1rem;
+  background-color: rgba(35, 31, 32, 0.6);
   @include bp(phone) {
-    padding: 0 2rem;
+    padding: 2rem 2rem;
   }
   @include bp(tablet) {
-    padding: 0 4rem;
+    height: 400px;
+    padding: 4rem 4rem;
     width: 50%;
     float: left;
-    transform: translate(0,-50%);
+    transform: translate(0%,-50%);
     top: 50%;
     text-align: left;
+    background-color: transparent;
   }
   @include bp(desktop) {
-    padding: 0 10rem 0 4rem;
+    padding: 8rem 10rem 0 4rem;
     @include wrapper;
   }
 }
 
 .banner-text-left {
+  height: 100%;
   text-align: center;
   position: absolute;
   top: 50%;
@@ -102,21 +107,23 @@ $weiss: 'weissenhof_grotesk', sans-serif;
   transform: translate(-50%,-50%);
   width: 100%;
   z-index: 100000;
-  padding: 0 1rem;
+  padding:  30% 1rem;
+  background-color: rgba(35, 31, 32, 0.6);
   @include bp(phone) {
-    padding: 0 2rem;
+    padding: 2rem 2rem;
   }
   @include bp(tablet) {
-    padding: 0 4rem;
+    padding: 4rem 4rem;
     width: 50%;
     float: right;
     transform: translate(-100%,-50%);
     top: 50%;
     right: 50%;
-    text-align: right;
+    text-align: left;
+    background-color: transparent;
   }
   @include bp(desktop) {
-    padding: 0 4rem 0 10rem;
+    padding: 8rem 4rem 0 10rem;
   }
 }
 
