--- a/_includes/home-about.html
+++ b/_includes/home-about.html
@@ -1,11 +1,11 @@
 <section id="home-about" class="text-section">
   <div class="para-box">
     <h2 class="para-header">
-      Companies that solely focus on competition will die. Those that focus on value creation will thrive.
+      A fresh business model, which provides greater value, autonomy and flexibility.
     </h2>
     <div class="para-body">
       <p class="pad-b">
-        We aren’t interested in creating a monopoly. We are interested in creating value for companies and allowing them to exceed their growth potential and achieve success. Cannabis Wheaton invests and support a range of cannabis cultivation companies each of which have different visions, voices and brand values, however they all share a common goal – create a world class industry based on diversity, quality and innovation.
+        At Cannabis Wheaton, we look to create value for companies in order for them to exceed their growth potential and to achieve success. We believe there is strength in numbers.  We invest and support a wide range of cannabis cultivation companies each of which have different visions, voices and brand values;  however they all share a common goal – create a world class industry based on diversity, quality and innovation.
       </p>
       <div class="text-center">
         <a class="button-dark text-center" href="{{site.baseurl}}/about">Learn More</a>
