--- a/_includes/home-connect.html
+++ b/_includes/home-connect.html
@@ -2,7 +2,7 @@
   <div class="hero-text text-center">
       <h1 class="hero-header">Coast-to-coast network</h1>
       <h2 class="hero-sub">
-        We are building a coast-to-coast network of partners that will set the stage for the next wave of the canadian cannabis industry.
+        We are building a pan-Canadian network of streaming partners that will define the future of the industry.
       </h2>
       <a class="button-light" href="{{site.baseurl}}/contact">Get connected</a>
   </div>
