--- a/_includes/home-team.html
+++ b/_includes/home-team.html
@@ -1,11 +1,11 @@
 <section id="home-team" class="text-section">
   <div class="para-box">
     <h2 class="para-header-alt">
-      At Cannabis Wheaton we believe there is strength in numbers. Our success is derived from the sum of our parts.
+      Our success is derived from the sum of our parts.
     </h2>
     <div class="para-body-alt">
       <p class="pad-b">
-        Our management team is comprised of industry ﬁrst-movers, visionaries and experts, dedicated to creating value for our partners and the cannabis industry.
+        Our management team is comprised of industry ﬁrst-movers, visionaries and experts, dedicated to creating value for our streaming partners and the cannabis industry.
       </p>
       <div class="text-left">
         <a class="button-dark text-center" href="{{site.baseurl}}/team">Meet the team</a>
