--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -80,10 +80,10 @@ $weiss: 'weissenhof_grotesk', sans-serif;
   padding: 30% 1rem;
   background-color: rgba(35, 31, 32, 0.6);
   @include bp(phone) {
-    padding: 2rem 2rem;
+    padding: 40% 2rem;
   }
   @include bp(tablet) {
-    height: 400px;
+    height: auto;
     padding: 4rem 4rem;
     width: 50%;
     float: left;
@@ -93,7 +93,7 @@ $weiss: 'weissenhof_grotesk', sans-serif;
     background-color: transparent;
   }
   @include bp(desktop) {
-    padding: 8rem 10rem 0 4rem;
+    padding: 0 10rem 0 4rem;
     @include wrapper;
   }
 }
@@ -110,9 +110,10 @@ $weiss: 'weissenhof_grotesk', sans-serif;
   padding:  30% 1rem;
   background-color: rgba(35, 31, 32, 0.6);
   @include bp(phone) {
-    padding: 2rem 2rem;
+    padding: 40% 2rem;
   }
   @include bp(tablet) {
+    height: auto;
     padding: 4rem 4rem;
     width: 50%;
     float: right;
@@ -123,7 +124,7 @@ $weiss: 'weissenhof_grotesk', sans-serif;
     background-color: transparent;
   }
   @include bp(desktop) {
-    padding: 8rem 4rem 0 10rem;
+    padding: 0 4rem 0 10rem;
   }
 }
 
