--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -131,43 +131,35 @@ $weiss: 'weissenhof_grotesk', sans-serif;
 .text-huge-green {
   @include clearfix;
   font-weight: lighter;
-  padding: 0;
+  padding: 0 1rem;
   color: $green;
-  @include bp(tablet) {
-    width: 100%;
-    clear: both;
-    padding: 2rem 0;
+  @include bp(phone) {
+    padding: 0 2rem;
   }
-  @include bp(desktop) {
-    padding: 4rem 0 0 0;
+  @include bp(tablet) {
+    float: left;
+    width: 50%;
+    padding: 2rem 4rem 0 2rem;
   }
   .huge-text-box {
     width: 80%;
     @include bp(tablet) {
-      width: 50%;
+      width: 100%;
       float: left;
-      text-align: right;
       padding-right: 1rem;
     }
   }
   .huge-text-box:nth-child(2) {
-    padding-top: 2rem;
+    padding-top: 1rem;
     border-top: 1px solid $green;
-    @include bp(tablet) {
-      border-top: none;
-      padding-top: 0;
-      text-align: left;
-      border-left: 1px solid $green;
-      padding-left: 1rem;
-    }
   }
   .header-huge {
     font-size: 90px;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
   }
   .content-huge {
-    font-size: 32px;
-    margin-bottom: 2rem;
+    font-size: 24px;
+    margin-bottom: 1rem;
   }
 }
 
